fixed 404 for routes that are too long

--- a/nuxt-startup/assets/styles/_buttons.scss
+++ b/nuxt-startup/assets/styles/_buttons.scss
@@ -15,7 +15,7 @@
 .btn-primary {
     background: $primary-color;
     border: 1px solid $primary-color;
-    color: $white;
+    color: $grey-dark;
 
     &:hover {
         background: darken($primary-color, 10%);
